fix(productivity-suite): make sure the app-nav-list height doesn't flicker
the .app-nav-list height depends on its content, when we select a new page
the active bold item un-bolds for an instant which makes the overhall height
of the nav shrink, only to increase back up when a new bold item reappears

avoid this issue by removing the block margin of the active li so that the
bolden text doesn't cause an increased height

--- a/productivity-suite/app/legacy-app/src/components/layout.css
+++ b/productivity-suite/app/legacy-app/src/components/layout.css
@@ -32,6 +32,10 @@
   text-align: center;
 }
 
+.app-nav-list > li:has(a.active) {
+  margin-block: 0;
+}
+
 .app-nav-list a {
   color: inherit;
   text-decoration: none;
